compiler/test-data/parser/types/errors/draft_on_collection.frel
module test

backend InvalidDraftBackend {
    cache : draft List<String>
}
